# libfort

./: CMakeLists.txt  README.md
clientcpp/: CMakeLists.txt
clientcpp/src/: main.cpp  plugin.h
src/: my_module.f90
